syntax = "proto3";
package tendermint.blockchain;

option go_package = "github.com/lazyledger/lazyledger-core/proto/tendermint/blockchain";

import "tendermint/types/block.proto";
import "tendermint/types/types.proto";

// BlockRequest requests a block for a specific height
message HeaderRequest {
  int64 height = 1;
}

// NoBlockResponse informs the node that the peer does not have block at the requested height
message NoHeaderResponse {
  int64 height = 1;
}

// BlockResponse returns block to the requested
message HeaderResponse {
  tendermint.types.Header                 header                   = 1;
  tendermint.types.DataAvailabilityHeader data_availability_header = 2;
  // COmmit is required for verification
  tendermint.types.Commit commit = 3;
}

// StatusRequest requests the status of a peer.
message StatusRequest {
}

// StatusResponse is a peer response to inform their status.
message StatusResponse {
  int64 height = 1;
  int64 base   = 2;
}

message Message {
  oneof sum {
    HeaderRequest    header_request     = 1;
    NoHeaderResponse no_header_response = 2;
    HeaderResponse   header_response    = 3;
    StatusRequest    status_request     = 4;
    StatusResponse   status_response    = 5;
  }
}
